# reading-tracker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/screenshots/: README.md
src/: App.css  App.tsx  chat-types.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs
src-tauri/src/chat/: commands.rs  db.rs  mod.rs  models.rs  prompt.rs
src-tauri/src/chat/providers/: anthropic.rs  gemini.rs  mod.rs  openai.rs
src/components/: BookDetail.tsx  BookForm.tsx  BookList.tsx  ChatPanel.tsx  ChatSettings.tsx  ExportButton.tsx  MessageBubble.tsx  SearchBar.tsx  SessionList.tsx  StarRating.tsx  TitleBar.tsx
